# draconity

./: CMakeLists.txt  run
scripts/client/: common.py  disable.py  enable.py  list.get.py  list.set.py  listener.py  load.py  show.py
scripts/parser/: parsecfg.py
src/: maclink.c  maclink.h  phrase.c  phrase.h  server.c  server.h  tack.c
src/grammar/: compile.c  compile.h  lex.c  make  nfa.c  nfa.h  node.c  node.h  parser.c  parser.h  rule.l  rule.y
